# tek_innov8rs_profanity_filter

./: .gitignore  CLAUDE.md  COURSE_REDESIGN_2026.md  PROJECT-STATUS.md  README.md  data_loader.py  evaluation.py  gemini_filter.py  gemini_smoke_test.py  llm_filter.py  main.py  notes.md  pyproject.toml  regex_filter.py  sklearn_filter.py
Reports/: AGILE_STANDUP_SUMMARY.md
data/: download.sh
docs/: 2025-11-perplexity-note.md  2025-12-questions-and-answers.md  2026-06-questions-and-answers.md  2026-06-reference-results.md  Perplexity_note.md  questions_and_answers.md
level1-rule-based/: LEVEL1-SUMMARY.md  SUMMARY-2025-11-25.md  analyze_missed.py  compare_baseline.py  detect_damn.py  main.py  pyproject.toml  regex_detector.py  regex_detector_expanded.py  test_bypasses.py  test_usernames.py  text_normalizer.py
level2-llm-based/: LEVEL2-SUMMARY.md  create_hard_examples.py  (+11 more)
level4-advanced/: API_USAGE.md  Dockerfile  LEVEL4-CONTINUATION-PLAN.md  LEVEL4-TOXICBERT-SUMMARY.md  LEVEL4_FINAL_SUMMARY.md  LEVEL4_ML_COMPLETION_STATUS.md  MODERNBERT_COMPARISON.md  README.md  SESSION_HANDOFF_2025-12-02.md  benchmark_toxicbert.py  docker-compose.yml  download_external_datasets.py  evaluate_external_datasets.py  evaluate_modernbert.py  evaluate_modernbert_multiclass.py  main.py  pyproject.toml  run_api.sh  toxicbert_benchmark.ipynb  train_modernbert.py  train_modernbert_multiclass.py
level4-advanced/api/: main.py
level4-advanced/src/profanity_filter/: __init__.py  cli.py  detector.py
level4-advanced/src/profanity_filter/models/: __init__.py  base.py  loader.py  modernbert.py  toxic_bert.py  traditional_ml.py
(+29 files in other folders)
